Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-1929: std::length_error on update children
  (Charles Strahan via rgs)

Release 3.4.7 - 2015-11-08

Backward compatible changes:

BUGFIXES:

  ZOOKEEPER-1888. ZkCli.cmd commands fail with "'java' is not recognized as an
  internal or external command" (Ivan Mitic via michim)

  ZOOKEEPER-1878. Inconsistent behavior in autocreation of dataDir and
  dataLogDir (Rakesh R via michim)

  ZOOKEEPER-1901. [JDK8] Sort children for comparison in AsyncOps tests
  (Andrew Purtell via michim)

  ZOOKEEPER-1906. zkpython: invalid data in GetData for empty node
  (Nikita Vetoshkin via michim)

  ZOOKEEPER-1897. ZK Shell/Cli not processing commands (stack via michim)

  ZOOKEEPER-1913. Invalid manifest files due to bogus revision property value
  (Raul Gutierrez Segales via michim)

  ZOOKEEPER-1911. REST contrib module does not include all required files when
  packaged (Sean Mackrory via michim)

  ZOOKEEPER-1926. Unit tests should only use build/test/data for data (Enis
  Soztutar via michim)

  ZOOKEEPER-1062. Net-ZooKeeper: Net::ZooKeeper consumes 100% cpu on wait
  (Botond Hejj via michim)

  ZOOKEEPER-1797. PurgeTxnLog may delete data logs during roll (Rakesh R via
  michim)

  ZOOKEEPER-1945. deb - zkCli.sh, zkServer.sh and zkEnv.sh regression caused
  by ZOOKEEPER-1663 (Mark Flickinger via fpj) 

  ZOOKEEPER-1939. ReconfigRecoveryTest.testNextConfigUnreachable is
  failing (Rakesh R via phunt)

  ZOOKEEPER-1222. getACL should only call DataTree.copyStat when passed in
  stat is not null (Michi Mutsuzaki via rakeshr)

  ZOOKEEPER-2146 BinaryInputArchive readString should check length before
  allocating memory (Hongchao Deng via michim)

  ZOOKEEPER-2039. Jute compareBytes incorrect comparison index (Ian Dimayuga via fpj)

  ZOOKEEPER-2047 testTruncationNullLog fails on windows (flavio via rakeshr)

  ZOOKEEPER-2026 Startup order in ServerCnxnFactory-ies is wrong (Stevo Slavic via rakeshr)
