@@ -5,6 +5,9 @@ BUGFIXES:
   ZOOKEEPER-1929: std::length_error on update children
   (Charles Strahan via rgs)
 
+  ZOOKEEPER-2211: PurgeTxnLog does not correctly purge when snapshots and
+  logs are at different locations (Arshad Mohammad via rgs)
+
 Release 3.4.7 - 2015-11-08
 
 Backward compatible changes:
